--- a/_posts/2015-01-01-主题预览.md
+++ b/_posts/2015-01-01-主题预览.md
@@ -30,7 +30,7 @@ categories: [jekyll]
 ###### 这里是h6
 ```
 
-# 引用
+## 引用
 
 > 这里是引用
 
@@ -38,7 +38,7 @@ categories: [jekyll]
 > 这里是引用
 ```
 
-# 常见字体样式
+## 常见字体样式
 
 *斜体*
 
@@ -60,7 +60,7 @@ __粗体__
 
 
 
-# 列表
+## 列表
 
 + 查找章节标题。
 + 上下翻页。
@@ -100,7 +100,7 @@ __粗体__
         项目里面的项目的内容
 ```
 
-# 图片&链接测试
+## 图片&链接测试
 
 [百度](http://baudu.com)
 
@@ -140,7 +140,7 @@ __粗体__
 ---------------------------------------
 ```
 
-# 代码测试
+## 代码测试
 
 看这里`function(){}`
 
@@ -223,7 +223,7 @@ __粗体__
 ```
 
 
-# 表格测试
+## 表格测试
 
 | Tables        | Are           | Cool  |
 | ------------- |:-------------:| -----:|
@@ -239,7 +239,7 @@ __粗体__
 | zebra stripes | are neat      |    $1 |
 ```
 
-# Html代码
+## Html代码
 
 直接插入，html代码不会被markdown转换
 
@@ -295,7 +295,7 @@ __粗体__
 </div>
 ```
 
-# 嵌入iframe
+## 嵌入iframe
 
 不支持！！！
 
