--- a/_posts/2016-04-16-深入探究z-index.md
+++ b/_posts/2016-04-16-深入探究z-index.md
@@ -14,7 +14,7 @@ CSS为盒模型的布局提供了三种不同的定位方案：
 
 其中最后一种定位方案将一个元素从常规流中移除，完全依赖开发者来确定元素显示的位置。通过赋予top, left, bottom 和 right 属性值，可以在二维平面上放置元素，此外CSS也允许使用z-index属性以在第三维上放置元素。
 
-# 概念
+## 概念
 
 表面上，z-index看起来像是一个简单的属性。 你可以设置各种值来决定某一个元素会被置于第三维的何处，然后就完成了。 实际上，这其中还有许多许多可以研究的内容，包括确定哪一类元素会被放置到其他元素上的一些规则。
 
@@ -30,7 +30,7 @@ CSS为盒模型的布局提供了三种不同的定位方案：
 
 目前，先让我们关注在整数值上。 整数值。数值越大，元素也就越靠近观察者。 数值越小，元素看起来也就越远。
 
-# 疑惑
+## 疑惑
 
 我想上面的逻辑非常易于理解，而且很有可能和你的预期是一致的。 尽管如此，现在还是有一些问题悬而未决、等待解答。
 
@@ -42,7 +42,7 @@ CSS为盒模型的布局提供了三种不同的定位方案：
 
 要回答这些问题，我们需要进一步地理解z-index是如何工作的，尤其是层叠上下文，层叠层，以及层叠次序这些概念。
 
-## 层叠上下文和层叠层
+### 层叠上下文和层叠层
 
 想象一张桌子，上面有一堆物品。 这张桌子就代表着一个层叠上下文。 如果在第一张桌子旁还有第二张桌子，那第二张桌子就代表着另一个层叠上下文。同时层叠上下文上还可以有层叠上下文
 
@@ -68,7 +68,7 @@ CSS为盒模型的布局提供了三种不同的定位方案：
 
 ![01](01.png)
 
-# demo
+## demo
 
 ```
 <style>
