--- a/_posts/2016-08-30-java-微信开发基本配置.md
+++ b/_posts/2016-08-30-java-微信开发基本配置.md
@@ -4,7 +4,7 @@ title: Java微信开发基本配置
 categories: [java]
 ---
 
-# 填写服务器配置,验证服务器地址的有效性
+## 填写服务器配置,验证服务器地址的有效性
 
 开发者提交信息后，微信服务器将发送GET请求到填写的服务器地址URL上,注意只有检验服务器的是Get请求，其他的消息都是Post请求
 
@@ -118,7 +118,7 @@ public class VerifyServlet extends HttpServlet {
 }
 ```
 
-# 获取access_token
+## 获取access_token
 
 access_token是公众号的全局唯一接口调用凭据，公众号调用各接口时都需使用access_token。开发者需要进行妥善保存。access_token的存储至少要保留512个字符空间。access_token的有效期目前为2个小时，需定时刷新，重复获取将导致上次获取的access_token失效
 
@@ -218,7 +218,7 @@ public class Get_access_token implements Runnable {
 }
 ```
 
-# 处理消息
+## 处理消息
 
 当启用并设置服务器配置后，用户发给公众号的消息以及开发者需要的事件推送，将被微信以Post方式转发到该URL中。
 所以需要在response给出响应，不过响应的类型时要符合微信标准的xml格式
@@ -255,7 +255,7 @@ public class MessageServlet extends HttpServlet{
 }
 ```
 
-# 总结
+## 总结
 
 注意: 公众平台接口调用仅支持80端口
 
