--- a/_posts/2016-10-15-使用CSS3让网页动起来.md
+++ b/_posts/2016-10-15-使用CSS3让网页动起来.md
@@ -8,7 +8,7 @@ categories: [html/css]
 
 这介绍几个具体的实例
 
-# 使用过渡
+## 使用过渡
 
 CSS3的transition只有在应用的元素上的属性发生变化时才会生效，所以可以把状态写在clss中，然后使用js再来改变class
 
@@ -44,7 +44,7 @@ function aniIn() {
 
 ![p01](01.gif)
 
-# 使用动画
+## 使用动画
 
 同样也可以使用CSS3的动画来实现上述效果，好处是进入，进出动画的控制比较自由
 
@@ -107,7 +107,7 @@ function aniIn() {
 
 ![p03](03.gif)
 
-# 更简单的Animate.css
+## 更简单的Animate.css
 
 如果自己定义的动画帧不好看，可以使用[Animate.css](https://daneden.github.io/animate.css/)，里面定义好了了大量的动画，使用时只需要添加类就可以了
 
@@ -124,7 +124,7 @@ function aniIn() {
 </script>
 ```
 
-# 一些缺陷
+## 一些缺陷
 
 上面虽然实现了动画效果，要么是透明度为0，要么是移动到屏幕之外看不到了，然而还会占据空间,但是有时候希望消除元素占用的空间，所以还要为元素设置display:none
 
@@ -157,7 +157,7 @@ function aniIn() {
 </script>
 ```
 
-# 进入页面时局部动画实现
+## 进入页面时局部动画实现
 
 结合Animate.css，实现首次进入/刷新，加完成时，某些局部元素的动画
 
@@ -187,7 +187,7 @@ function aniIn() {
 
 ![p04](04.gif)
 
-# 点击冒泡动画
+## 点击冒泡动画
 
 ```css
 @keyframes fadeOutUp {
