--- a/_posts/2016-11-22-sql常用语句.md
+++ b/_posts/2016-11-22-sql常用语句.md
@@ -4,7 +4,7 @@ title: SQL常用语句
 categories: [sql]
 ---
 
-# 选择操作
+## 选择操作
 
 + SELECT .. FROM ..
 
@@ -186,7 +186,7 @@ categories: [sql]
         ) > 500
     ```
 
-# 修改操作
+## 修改操作
 
 update，insert，delete都被归纳为修改操作
 
