--- a/_posts/2017-03-22-修改主题的留言模块为畅言.md
+++ b/_posts/2017-03-22-修改主题的留言模块为畅言.md
@@ -12,7 +12,7 @@ categories: [jekyll]
 
 对主题做如下修改
 
-## 删除_config.yml的下面部分
+### 删除_config.yml的下面部分
 
 ```
 # 用于多说评论 填入留言板地址
@@ -20,7 +20,7 @@ realchaturl: http://blog.tmaize.net/pages/chat
 domain: http://blog.tmaize.net
 ```
 
-## 删除chat.html的下面部分
+### 删除chat.html的下面部分
 
 ```html
 <!--多说-->
@@ -38,7 +38,7 @@ domain: http://blog.tmaize.net
 </script>
 ```
 
-## 在chat.html里面加上畅言的代码
+### 在chat.html里面加上畅言的代码
 
 ```html
 <!--畅言-->
@@ -52,11 +52,11 @@ if (width < 960) {
 window.document.write('<script id="changyan_mobile_js" charset="utf-8" type="text/javascript" src="http://changyan.sohu.com/upload/mobile/wap-js/changyan_mobile.js?client_id=' + appid + '&conf=' + conf + '"><\/script>'); } else { var loadJs=function(d,a){var c=document.getElementsByTagName("head")[0]||document.head||document.documentElement;var b=document.createElement("script");b.setAttribute("type","text/javascript");b.setAttribute("charset","UTF-8");b.setAttribute("src",d);if(typeof a==="function"){if(window.attachEvent){b.onreadystatechange=function(){var e=b.readyState;if(e==="loaded"||e==="complete"){b.onreadystatechange=null;a()}}}else{b.onload=a}}c.appendChild(b)};loadJs("http://changyan.sohu.com/upload/changyan.js",function(){window.changyan.api.config({appid:appid,conf:conf})}); } })(); </script>
 ```
 
-## 完美显示
+### 完美显示
 
 ![p2](02.jpg)
 
-## 使用体验
+### 使用体验
 
 感觉畅言加载要比多说快好多，不过功能太多，过于臃肿，而且没有游客留言功能，注册畅言的时候还要域名备案....
 
