--- a/_posts/2017-03-23-struts2学习03-页面配置-获取数据.md
+++ b/_posts/2017-03-23-struts2学习03-页面配置-获取数据.md
@@ -3,9 +3,9 @@ layout: mypost
 title: Struts2学习-03 页面配置 获取数据
 categories: [java]
 ---
-# 配置结果页面
+## 配置结果页面
 
-## 全局结果页面
+### 全局结果页面
 
 多个action的方法的返回值相同，跳转的页面页相同，为了可以通过配置全局结果页面减少配置文件的书写
 
@@ -18,7 +18,7 @@ categories: [java]
 </global-results>
 ```
 
-## 局部结果页面
+### 局部结果页面
 
 在action里面配置的result
 
@@ -32,7 +32,7 @@ categories: [java]
 </action>
 ```
 
-## result标签的type属性
+### result标签的type属性
 
 转发操作不改变url地址，一次请求
 
@@ -55,7 +55,7 @@ categories: [java]
 |xslt|org.apache.struts2.views.xslt.XSLTResult|呈现XML到浏览器，该XML可以通过XSL模板进行转换|
 |plaintext |org.apache.struts2.dispatcher.PlainTextResult|返回普通文本|
 
-# 在action里获得数据
+## 在action里获得数据
 
 由于Struts默认配置了字符编码，所以post提交表单时不会有乱码
 
@@ -103,7 +103,7 @@ categories: [java]
 
     Action类实现ServletRequestAware接口，设置setServletRequest方法来得到一个HttpServletRequest对象
 
-# 在action中操作域对象
+## 在action中操作域对象
 
 通过ServletActionContext来获取域对象
 
@@ -114,9 +114,9 @@ categories: [java]
 
 通过setAttribute方法来操作域对象
 
-# 使用struts封装的方式获取数据
+## 使用struts封装的方式获取数据
 
-## 属性封装
+### 属性封装
 
 直接把表单提交属性封装到Actiond的属性里面
 
@@ -138,7 +138,7 @@ categories: [java]
 
 3. 提交数据到action中时，会自动封装到这些成员变量
 
-## 模型驱动封装(开发中常用)
+### 模型驱动封装(开发中常用)
 
 可以把数据直接封装到对象里面,前提条件是实体类中的属性值的名字和表单输入项的name要一样
 
@@ -162,7 +162,7 @@ categories: [java]
     }
     ```
 
-## 表达式封装
+### 表达式封装
 
 有时候也把表达式封装分类为属性封装
 
@@ -210,7 +210,7 @@ user.username的username要在User里面有同名属性且提供get/set
     <input type="text" name="book.name">
     ```
 
-## 封装数据到集合中
+### 封装数据到集合中
 
 1. 封装到List
 
