--- a/_posts/2017-03-25-struts2学习04-ognl-值栈.md
+++ b/_posts/2017-03-25-struts2学习04-ognl-值栈.md
@@ -4,11 +4,11 @@ title: Struts2学习-04 OGNL 值栈
 categories: [java]
 ---
 
-# struts2标签
+## struts2标签
 
 使用需要在jsp中引入标签库`<%@ taglib uri="/struts-tags" prefix="s"%>`
 
-# OGNL概述
+## OGNL概述
 
 + 类似于在jsp中的el表达式，el表达式在jsp中获取域对象里面的值。同样OGNL也是一种表达式，不过这个功能更加强大
 
@@ -28,7 +28,7 @@ categories: [java]
 
     操作集合对象
 
-## #和%的使用
+### #和%的使用
 
 使用#来获取context里面的数据
 
@@ -53,17 +53,17 @@ request.setAttribute("name", "haha");
 <s:textfield name="name" value="%{#request.name}"></s:textfield>
 ```
 
-# 值栈
+## 值栈
 
 struts2 里面提供本身一种存储机制，类似于域对象
 
-## 概念
+### 概念
 
 以前是把数据放到域对象里面，然后再在jsp中取出。在Struts中既可以把数据放到域对象（Action）也可以放到值栈里面
 
 在action里面把数据放到值栈，再在页面中取出
 
-## 获取值栈对象
+### 获取值栈对象
 
 位置:action每次访问都是一个新的对象，每个action对象中都存在一个值栈对象。
 因此无论在一个action获得多少次值栈对象，都是一样的
@@ -76,7 +76,7 @@ struts2 里面提供本身一种存储机制，类似于域对象
     ActionContext actionContext = ActionContext.getContext();
 	ValueStack valueStack = actionContext.getValueStack();
     ```
-## 内部结构
+### 内部结构
 
 可以在页面中通过`<s:debug></s:debug>`来查看当前值栈的内部结构，如下图所示
 
@@ -98,7 +98,7 @@ struts2 里面提供本身一种存储机制，类似于域对象
 
     ![p3](03.jpg)
 
-## 向值栈存放数据
+### 向值栈存放数据
 
 方法有多种
 
@@ -130,7 +130,7 @@ struts2 里面提供本身一种存储机制，类似于域对象
     }
     ```
 
-## 从值栈获取数据
+### 从值栈获取数据
 
 1. 使用struts2的标签+ognl表达式获取值栈数据`<s:property value="ognl表达式"/>`
 
