--- a/_posts/2017-04-08-hibernate学习笔记03-数据库操作-检索-表关系.md
+++ b/_posts/2017-04-08-hibernate学习笔记03-数据库操作-检索-表关系.md
@@ -4,7 +4,7 @@ title: Hibernate学习笔记03 数据库操作 检索 表关系
 categories: [java]
 ---
 
-# 数据库操作
+## 数据库操作
 
 有好几种方式实现实体类的CRUD操作
 
@@ -16,7 +16,7 @@ categories: [java]
 
 4. 本地SQL
 
-## 对象导航
+### 对象导航
 
 1. 查询操作：get(),load()
 
@@ -71,7 +71,7 @@ categories: [java]
     在实际应用中，程序员不会注意到一个实体对象的状态，而对脱管态调用save是不对的。对临时对象调用update也是
     不对的，为了解决这个问题产生了saveOrUpdate，当它是托管状态是系统会调用update方法，是临时对象时调用save方法
 
-## HQL
+### HQL
 
 为Hibernate Query Language的简称。具有与SQL类似的语法规范，只不过SQL针对表中字段进行查询而HQL针对持久化对象，用它来取得对象，而不进行update，delete和insert操作。
 
@@ -187,7 +187,7 @@ categories: [java]
 
     + 迫切左外连接
 
-## QBC
+### QBC
 
 通过对Criteria对象的设置来筛选查询结果
 
@@ -240,7 +240,7 @@ Criteria cr = detachedCriteria.getExecutableCriteria(session);
 //后面和Criteria的操作一样
 ```
 
-## Native SQL 查询
+### Native SQL 查询
 
 直接使用本地数据库的sql语言进行查询
 
@@ -254,7 +254,7 @@ for(User u:(List<User>)sqlQuery.list()){
 }
 ```
 
-## 命名查询
+### 命名查询
 
 可以将查询语句放在映射文件中
 
@@ -277,7 +277,7 @@ for(User u:(List<User>)q.list()){
 }
 ```
 
-# 检索策略
+## 检索策略
 
 hibernate检索策略分为两类
 
@@ -285,15 +285,15 @@ hibernate检索策略分为两类
 
 + 延迟查询：根据id查询，调用load方法，并不会马上执行，只有用到对象里面的值的时候才会发送语句查询数据库
 
-## 两类延迟查询
+### 两类延迟查询
 
 + 类级别延迟
 
 + 关联级别延迟
 
-# 表之间的关系
+## 表之间的关系
 
-## 一对多
+### 一对多
 
 客户 - 联系人：一个客户可以有多个联系人，但是一个联系人只属于一个客户
 
@@ -398,7 +398,7 @@ hibernate检索策略分为两类
     </set>
     ```
 
-## 多对多
+### 多对多
 
 通过建立两张表之间的联系表来实现多对多关系
 
