--- a/_posts/2017-04-19-nginx配置ssl-重新编译.md
+++ b/_posts/2017-04-19-nginx配置ssl-重新编译.md
@@ -9,7 +9,7 @@ categories: [linux]
 
 但是要用到别人的api怎么办，通过wx.request是禁止请求的，只好通过自己的服务器做一次转发/代理，下面是步骤
 
-# 生成证书
+## 生成证书
 
 1. 进入你想创建证书和私钥的目录
 
@@ -30,9 +30,9 @@ categories: [linux]
 	```
 
 
-# Nginx配置SSL
+## Nginx配置SSL
 
-## 更改nginx.conf
+### 更改nginx.conf
 
 添加下面的配置
 
@@ -50,7 +50,7 @@ server {
 }
 ```
 
-## 应用配置
+### 应用配置
 
 重启Nginx服务，如果没有报错，到这里就OK了
 
@@ -62,7 +62,7 @@ server {
 nginx: [emerg] the "ssl" parameter requires ngx_http_ssl_module in /usr/local/nginx/conf/nginx.conf:56
 ```
 
-## 重新编译Nginx
+### 重新编译Nginx
 
 1. 查看之前的编译信息
 
@@ -110,7 +110,7 @@ nginx: [emerg] the "ssl" parameter requires ngx_http_ssl_module in /usr/local/ng
 	[root@VM_243_11_centos sbin]# ./nginx
 	```
 
-# 访问域名测试
+## 访问域名测试
 
 ![p1](01.jpg)
 
