--- a/_posts/2017-04-30-android中的各种弹窗实现.md
+++ b/_posts/2017-04-30-android中的各种弹窗实现.md
@@ -6,7 +6,7 @@ categories: [android]
 
 在 Android 中实现弹出层方式很多，下面介绍几种常用的
 
-# 1.通过FrameLayout模拟弹出层
+## 1.通过FrameLayout模拟弹出层
 
 优点：实现简单，布局也比较好写
 
@@ -119,7 +119,7 @@ protected void onCreate(Bundle savedInstanceState) {
 }
 ```
 
-# 2.各种Dialog
+## 2.各种Dialog
 
 这里以Dialog为例子，系统中其他的Dialog类似
 
@@ -139,7 +139,7 @@ dialog.setContentView(LayoutInflater.from(mContext).inflate(R.layout.pop,null));
 dialog.show();
 ```
 
-# 3.DialogFragment
+## 3.DialogFragment
 
 使用DialogFragment来管理对话框，当旋转屏幕和按下后退键时可以更好的管理其声明周期，它和Fragment有着基本一致的声明周期。
 且DialogFragment也允许开发者把Dialog作为内嵌的组件进行重用，类似Fragment（可以在大屏幕和小屏幕显示出不同的效果）
@@ -178,7 +178,7 @@ MyDialog dialog = new MyDialog();
 dialog.show(getFragmentManager(), "mydialog");
 ```
 
-# 4.PopupWindow
+## 4.PopupWindow
 
 PopupWindow是一个以弹窗方式呈现的控件，可以用来显示任意视图(View)，而且会浮动在当前活动(activity)的顶部”。因此我们可以通过PopupWindow实现各种各样的弹窗效果,进行信息的展示或者是UI交互，由于PopupWindow自定义布局比较方便，而且在显示位置比较自由不受限制，因此受到众多开发者的青睐。
 
@@ -242,7 +242,7 @@ popWindow.setBackgroundDrawable(new ColorDrawable());
 popWindow.showAtLocation(findViewById(R.id.outer), Gravity.BOTTOM|Gravity.CENTER_HORIZONTAL, 0, 0);
 ```
 
-# 5.Toast
+## 5.Toast
 
 这是最常见的一种弹窗，用法也比较简单
 
@@ -265,7 +265,7 @@ toastView.addView(view,0);
 toast.show();
 ```
 
-# 6.Activity并配合Dialog主题的方式实现弹窗
+## 6.Activity并配合Dialog主题的方式实现弹窗
 
 建立一个样式继承Dialog主题，在Activity中指定样式
 
