--- a/_posts/2017-06-13-学校图书馆登陆模拟.md
+++ b/_posts/2017-06-13-学校图书馆登陆模拟.md
@@ -12,7 +12,7 @@ categories: [java,小技巧]
 
 其次是教务管理系统，登录名为学号，登陆密码是身份证号，也是很少有人改动，模拟登陆，然后在个人信息那里有一张个人照片，解析到照片地址，下载haha
 
-# 登陆原理
+## 登陆原理
 
 1. 浏览器第一次访问登陆时，没有携带sessionid，然后服务器会生成一个sessionid，并在cookie里面返回sessionid，带给浏览器，之后我们的任何访问都会带上这个sessionid
 
@@ -22,7 +22,7 @@ categories: [java,小技巧]
 
 4. 注销操作，应该是类似`getSession.removeAttribute("name")`的操作
 
-# 请求分析
+## 请求分析
 
 使用F12开发工具对登陆的请求分析
 
@@ -61,7 +61,7 @@ Server:Apache/2.2.22 (Win32) PHP/5.2.17
 X-Powered-By:PHP/5.2.17
 ```
 
-# 图书馆登陆代码
+## 图书馆登陆代码
 
 ```java
 public class Main {
@@ -156,13 +156,13 @@ public class Main {
 }
 ```
 
-## 效果
+### 效果
 
 ![p01](01.jpg)
 
 ![p02](02.jpg)
 
-# 教务系统登陆
+## 教务系统登陆
 
 原理同上，和图书馆登陆一样，也是基于session认证
 
