--- a/_posts/2017-08-09-正确引入layui模块.md
+++ b/_posts/2017-08-09-正确引入layui模块.md
@@ -7,7 +7,7 @@ categories: [javascript]
 > [Layui](http://www.layui.com/doc/base/infrastructure.html) 出蛋于2016年金秋，是一款带着浓烈情怀的国产前端UI框架，她追求极简，又不失丰盈的内在，说她是史上最轻量的结晶，似乎并不为过。一切都源自于她对原生态的执着，对前端社区的那些噪杂声音的过滤，以及她本身的精心雕琢
 
 
-# 引入所有
+## 引入所有
 
 浏览器在加载的时候会加载一个较大的layui.all.js文件
 
@@ -29,7 +29,7 @@ categories: [javascript]
 </script> 
 ```
 
-# 通过layui.use加载模块
+## 通过layui.use加载模块
 
 通过这种方式引入模块最大的好处是，在需要的时候才被加载需要模块，能够提高网页的记载速度
 
@@ -57,7 +57,7 @@ layui.use(['layer'], function(){
 </script> 
 ```
 
-# 自定义模块引入
+## 自定义模块引入
 
 定义
 
@@ -107,7 +107,7 @@ layui.mymod.say()
 
 推荐将自己的js方法以layui模块的方式书写，这样就可以通过user的方式来在需要的时候加载，加快页面的载入速度
 
-# 最佳实践
+## 最佳实践
 
 页面
 
@@ -138,7 +138,7 @@ layui.use(['layer', 'form', 'jquery','mymodel'], function() {
 });
 ```
 
-# 独立组件
+## 独立组件
 
 layui的某些模块是可以作为独立组件的，用的时候直接引用即可
 
