--- a/_posts/2017-08-15-原生js插件封装.md
+++ b/_posts/2017-08-15-原生js插件封装.md
@@ -8,7 +8,7 @@ categories: [javascript]
 
 为了保证代码的简洁性，肯定是打算自己造轮子，下面是进行原生JavsScript插件的一些步骤
 
-# 要求
+## 要求
 
 首先一个合格的插件要有下面几个要求
 
@@ -22,11 +22,11 @@ categories: [javascript]
 
 + 插件支持链式调用
 
-## 步骤
+### 步骤
 
 显然，把所有功能都写在一个单纯的函数内是无法满足上述要求的
 
-## 插件全局函数
+### 插件全局函数
 
 实现私有作用域，最好的办法就是使用闭包。可以把插件当做一个函数，插件内部的变量及函数的私有变量，为了在调用插件后依旧能使用其功能，闭包的作用就是延长函数(插件)内部变量的生命周期，使得插件函数可以重复调用，而不影响用户自身作用域。
 
@@ -38,7 +38,7 @@ categories: [javascript]
 })();
 ```
 
-## 插件默认参数
+### 插件默认参数
 
 插件的主要功能可以总结至几个关键参数，通过这几个关键参数即可修改插件的主要功能，也是第三步API设置的关键参数。
 
@@ -54,7 +54,7 @@ var options = {
 }
 ```
 
-## 插件API、参数设置和监听
+### 插件API、参数设置和监听
 
 因为API指向的是使用者，故需要在用户调用插件时将API暴露给用户，因用户API时是通过插件提供的名字进行使用，故将API设置为Object类型，用户就可以通过调用API的key进行使用，具体的代码如下：
 
@@ -78,7 +78,7 @@ var api = {
 this.pluginName = api;
 ```
 
-## 代码框架
+### 代码框架
 
 根据上述步骤
 
@@ -126,7 +126,7 @@ this.pluginName = api;
 })();
 ```
 
-# 对象
+## 对象
 
 当然了,通过对象的创建也能很好的实现上述的效果
 
@@ -136,7 +136,7 @@ this.pluginName = api;
 
 总之闭包函数写的插件体现在公用，通过对象写的插件体现在私用，比如分页插件，一个页面可能有多个分页插件，采用不同的配置，不同的监听效果，，用该使用多个对象才能对多个分页插件进行互不干扰的操作
 
-# DEMO
+## DEMO
 
 下面是一个简单的jsonp插件代码
 
