--- a/_posts/2017-09-14-junit的正确使用姿势.md
+++ b/_posts/2017-09-14-junit的正确使用姿势.md
@@ -8,7 +8,7 @@ categories: [java]
 
 直到最近读了一篇关于junit的文章才知道junit的强大之处以及自已使用上的错误....
 
-# 正确建立Junit Test Case
+## 正确建立Junit Test Case
 
 以前就是直接建立一个类，然后写上一堆方法，在方法上加上@Test注解然后单独运行方法
 
@@ -58,7 +58,7 @@ public class AdminServiceTest {
 }
 ```
 
-# 注解
+## 注解
 
 常见的注解如下
 
@@ -88,7 +88,7 @@ public class AdminServiceTest {
 
 + @FixMethodOrder	指定测试方法的执行顺序
 
-# 断言
+## 断言
 
 断言是编写测试用例的核心实现方式，即期望值是多少，测试的结果是多少，以此来判断测试是否通过
 
@@ -130,11 +130,11 @@ public void testAssertEquals() {
 
 ![03](03.png)
 
-# 高级使用
+## 高级使用
 
 下面是一些具体案例
 
-## 参数化测试
+### 参数化测试
 
 有时一个测试方法，不同的参数值会产生不同的结果
 
@@ -202,7 +202,7 @@ public class FibonacciTest {
 
 ![04](04.png)
 
-## 打包测试
+### 打包测试
 
 如果一个项目中有很多个测试用例，如果一个个测试也很麻烦，因此打包测试就是一次性测试完成包中含有的所有测试用例
 
@@ -220,7 +220,7 @@ public class AllTests {
 
 ![06](06.png)
 
-## 异常测试
+### 异常测试
 
 异常测试与普通断言测试不同，共有三种方法
 
@@ -264,7 +264,7 @@ public class AllTests {
 	}
 	```
 
-## 限时测试
+### 限时测试
 
 有时为了防止出现死循环或者方法执行过长（或检查方法效率），而需要使用到限时测试。顾名思义，就是超出设定时间即视为测试失败。共有两种写法
 
@@ -295,7 +295,7 @@ public void test2() {
 }
 ```
 
-# 测试Spring
+## 测试Spring
 
 主要是测试dao层，可以不频繁的启动服务器代码如下，不难理解
 
@@ -355,7 +355,7 @@ public abstract class AbstractTransactionalJUnit4SpringContextTests extends Abst
 }
 ```
 
-# 总结
+## 总结
 
 + 测试不应该是简单的System.out，然后肉眼观察，因为这严重违背了自动测试的原则
 
