--- a/_posts/2017-09-20-git日常使用.md
+++ b/_posts/2017-09-20-git日常使用.md
@@ -4,7 +4,7 @@ title: Git日常使用
 categories: [小技巧]
 ---
 
-# 常用命令
+## 常用命令
 
 ![001](001.png)
 
@@ -117,7 +117,7 @@ categories: [小技巧]
 
     推送标签
 
-# 分支管理策略
+## 分支管理策略
 
 + 主分支Master
 
@@ -149,13 +149,13 @@ categories: [小技巧]
 
         ![005](005.png)
 
-# GitHub
+## GitHub
 
-## 配置ss登陆
+### 配置ss登陆
 
 [配置ss登陆](http://blog.tmaize.net/posts/2017/07/22/github%E9%85%8D%E7%BD%AEssh%E7%99%BB%E9%99%86.html)
 
-## 多人协作
+### 多人协作
 
 有三种方法
 
@@ -165,7 +165,7 @@ categories: [小技巧]
 
 3. 别人fork你的项目，然后给你发 pull request
 
-# 参考
+## 参考
 
 [廖雪峰Git教程](https://www.liaoxuefeng.com/wiki/0013739516305929606dd18361248578c67b8067c8c017b000)
 
