--- a/_posts/2017-11-12-ReqProxy.md
+++ b/_posts/2017-11-12-ReqProxy.md
@@ -10,7 +10,7 @@ categories: [java]
 
 为了让自己的服务器支持跨域可以设置`resp.setHeader("Access-Control-Allow-Origin", "*")`,或者提供对结果进行jsonp封装的选项
 
-# 参数
+## 参数
 
 + url
     
@@ -54,13 +54,13 @@ categories: [java]
 
     jsonp的回调名，`callback+"{"+result+"}";`
 
-# Demo
+## Demo
 
 ![001](001.png)
 
 ![002](002.png)
 
-# 代码
+## 代码
 
 ```
 public class ReqParm {
