--- a/_posts/2018-01-07-vue数据绑定的原理.md
+++ b/_posts/2018-01-07-vue数据绑定的原理.md
@@ -4,7 +4,7 @@ title: Vue数据绑定的原理
 categories: [javascript]
 ---
 
-# 原理
+## 原理
 
 其实原理很简单，就是拦截了Object的get/set方法，在对数据进行set`(obj.aget=18)`时去重现渲染视图
 
@@ -68,7 +68,7 @@ categories: [javascript]
     t.age=18;
     ```
 
-# 实现数据到视图的绑定
+## 实现数据到视图的绑定
 
 这里的渲染只是一个简单的正则替换
 
@@ -133,7 +133,7 @@ var app = new Element('test', {
 })
 ```
 
-# 实现视图到数据的绑定
+## 实现视图到数据的绑定
 
 这里做一个简单的input改变的事件监听
 
