--- a/_posts/2016-05-28-正则表达式.md
+++ b/_posts/2016-05-28-正则表达式.md
@@ -4,13 +4,13 @@ title: 正则表达式
 categories: [java,javascript]
 ---
 
-# 正则表达式
+## 正则表达式
 
 正则表达式(Regular Expression)是一种文本模式，包括普通字符（例如，a 到 z 之间的字母）和特殊字符（称为"元字符"）。
 
 正则表达式使用单个字符串来描述、匹配一系列匹配某个句法规则的字符串。
 
-## 常用规则
+### 常用规则
 
 | 字符           | 描述  |
 |:-------------:| :-----|
@@ -24,7 +24,7 @@ categories: [java,javascript]
 |[a-z]|字符范围。匹配指定范围内的任意字符|
 |.|匹配除 "\n" 之外的任何单个字符。要匹配包括 '\n' 在内的任何字符可以用"(.|\n)"|
 
-## 限定符
+### 限定符
 
 限定符用来指定正则表达式的一个给定组件必须要出现多少次才能满足匹配
 
@@ -38,7 +38,7 @@ categories: [java,javascript]
 |{n,m}|m,n为非负整数n <= m,最n-m次,在逗号和两个数之间不能有空格|
 |()|把括号内的作为一个整体，比如(ab){2},匹配abab|
 
-## 定位符
+### 定位符
 
 定位符用来描述字符串或单词的边界
 
@@ -49,7 +49,7 @@ categories: [java,javascript]
 |\b|匹配一个字边界，即字与空格间的位置|
 |\B|非字边界匹配|
 
-## 非打印字符
+### 非打印字符
 
 非打印字符也可以是正则表达式的组成部分。下表列出了表示非打印字符的转义序列
 
@@ -64,7 +64,7 @@ categories: [java,javascript]
 |\t	|匹配一个制表符。等价于 \x09 和 \cI|
 |\v	|匹配一个垂直制表符。等价于 \x0b 和 \cK|
 
-# 贪婪非贪婪
+## 贪婪非贪婪
 
 *、+和?限定符都是贪婪的，因为它们会尽可能多的匹配文字，只有在它们的后面加上一个?就可以实现非贪婪或最小匹配
 
@@ -74,13 +74,13 @@ categories: [java,javascript]
 
 而使用`<.+?>`就变成了非贪婪匹配，会匹配到`<p>`和`</p>`
 
-# 在Java中使用正则
+## 在Java中使用正则
 
 在Java 正则表达式很方便
 
 主要使用java.util.regex包下的几个类
 
-## Pattern
+### Pattern
 
 Pattern对象是一个正则表达式的编译表示。Pattern类没有构造方法。要创建一个 Pattern 对象，你必须首先调用其公共静态的compile编译方法要么传入一个正则表达式或者传入一个表达式和规则，比如不区分大小写....
 
@@ -89,7 +89,7 @@ Pattern pattern = Pattern.compile("<.+?>");
 Pattern pattern = Pattern.compile("<.+?>",Pattern.CASE_INSENSITIVE);
 ```
 
-## Matcher
+### Matcher
 
 Matcher对象是对输入字符串进行解释和匹配操作的引擎。与Pattern 类一样，Matcher 也没有公共构造方法。你需要调用 Pattern 对象的 matcher 方法来获得一个 Matcher 对象。
 
@@ -117,7 +117,7 @@ while(matcher.find()){
 }
 ```
 
-## 其他
+### 其他
 
 在字符串上可以直接使用正则表达式
 
@@ -136,7 +136,7 @@ false
 123
 ```
 
-# 在JavaScript中使用正则
+## 在JavaScript中使用正则
 
 在js里使用正则表达式依靠RegExp对象
 
@@ -154,7 +154,7 @@ g 执行全局匹配（查找所有匹配而非在找到第一个匹配后停止
 
 m 执行多行匹配。
 
-## 常用方法
+### 常用方法
 
 ```
 patt.test(str)//测试字符串是否符合模式
@@ -194,7 +194,7 @@ s.match(/<.+?>/g);
 ["<p>", "</p>"]
 ```
 
-# 参考
+## 参考
 
 [正则表达式 - 教程](http://www.runoob.com/regexp/regexp-tutorial.html)
 
