--- a/_posts/2016-06-12-观察者模式-单例模式.md
+++ b/_posts/2016-06-12-观察者模式-单例模式.md
@@ -4,11 +4,11 @@ title: 观察者模式 单例模式
 categories: [设计模式]
 ---
 
-# 观察者模式
+## 观察者模式
 
 有时被称作发布/订阅模式，观察者模式定义了一种一对多的依赖关系，让多个观察者对象同时监听某一个主题对象。这个主题对象在状态发生变化时，会通知所有观察者对象，使它们能够自动更新自己。
 
-## 场景
+### 场景
 
 将一个系统分割成一个一些类相互协作的类有一个不好的副作用，那就是需要维护相关对象间的一致性。我们不希望为了维持一致性而使各类紧密耦合，这样会给维护、扩展和重用都带来不便。观察者就是解决这类的耦合关系的。
 
@@ -18,7 +18,7 @@ categories: [设计模式]
 
 + 当一个对象必须通知其它对象，而它又不能假定其它对象是谁。换言之, 你不希望这些对象是紧密耦合的。
 
-## 模式中的角色
+### 模式中的角色
 
 + 抽象被观察者角色(Subject/Watched)：把所有对观察者对象的引用保存在一个集合中，每个被观察者角色都可以有任意数量的观察者。被观察者提供一个接口，可以增加和删除观察者角色。一般用一个抽象类和接口来实现。
 
@@ -28,7 +28,7 @@ categories: [设计模式]
 
 + 具体观察者角色(ConcreteObserver)：该角色实现抽象观察者角色所要求的更新接口，以便使本身的状态与主题的状态相协调。通常用一个子类实现。如果需要，具体观察者角色可以保存一个指向具体主题角色的引用。
 
-## 代码实现
+### 代码实现
 
 抽象的被观察者
 
@@ -125,7 +125,7 @@ public class Test {
 }
 ```
 
-## 总结
+### 总结
 
 观察者模式在于目标角色、观察者角色之间的通信，有两个版本。
 
@@ -135,7 +135,7 @@ public class Test {
 
 这两种模式的使用，取决于系统设计时的需要。如果目标角色比较复杂，并且观察者角色进行更新时必须得到一些具体变化的信息，则“推模式”比较合适。如果目标角色比较简单，则“拉模式”就很合适。
 
-# 单例模式
+## 单例模式
 
 对于系统中的某些类来说，只有一个实例很重要，例如，一个系统中可以存在多个打印任务，但是只能有一个正在工作的任务。而且只有一个实例能够减少内存占用，还可以防止实例存在多个会引起的程序逻辑错误。
 
@@ -144,7 +144,7 @@ public class Test {
 单例模式实现的方法较多，但是基本的就两种，懒汉模式和饿汉模式
 
 
-## 懒汉模式
+### 懒汉模式
 
 懒汉式顾名思义，会延迟加载，在第一次使用该单例的时候才会实例化对象出来，第一次调用时要做初始化，如果要做的工作比较多，性能上会有些延迟，之后就和饿汉式一样了。
 
@@ -185,7 +185,7 @@ public class Singleton {
 }
 ```
 
-## 饿汉模式
+### 饿汉模式
 
 饿汉就是类一旦加载，就把单例初始化完成，保证getInstance的时候，单例是已经存在的了，所以饿汉式天生就是线程安全的，可以直接用于多线程而不会出现问题。但是不管之后会不会使用这个单例，都会占据一定的内存，相应的，在第一次调用时速度也会更快，因为其资源已经初始化完成。
 
