--- a/_posts/2017-06-06-ssh框架搭建.md
+++ b/_posts/2017-06-06-ssh框架搭建.md
@@ -4,7 +4,7 @@ title: SSH框架搭建
 categories: [java]
 ---
 
-# 思路
+## 思路
 
 具体项目中一般是web调用services，services调用dao
 
@@ -22,13 +22,13 @@ categories: [java]
 
     spring生成sessionFactory，把数据源注入到sessionFactory，同时指定hibernate核心配置文件位置
 
-# Spring和struts2整合
+## Spring和struts2整合
 
-## 导入相关jar包
+### 导入相关jar包
 
 ![01](01.jpg)
 
-## 配置Spring随启动加载
+### 配置Spring随启动加载
 
 + 创建spring.xml
 
@@ -71,7 +71,7 @@ categories: [java]
 </listener>
 ```
 
-## 搭建Struts环境
+### 搭建Struts环境
 
 + 创建Action测试类
 
@@ -91,7 +91,7 @@ categories: [java]
 </filter-mapping>
 ```
 
-## 整合
+### 整合
 
 + 用IOC的方式生成Action
 
@@ -110,15 +110,15 @@ categories: [java]
 </package>
 ```
 
-# Spring和Hibernate整合
+## Spring和Hibernate整合
 
-## 导入相关jar包
+### 导入相关jar包
 
 除了hibernate的基本jar包外，还需要数据库连接池（非必须）及spring-orm.jar的配合
 
 ![02](02.jpg)
 
-## 在Spring配置中配置连接池
+### 在Spring配置中配置连接池
 
 ```xml
 <bean id="dataSource" class="com.mchange.v2.c3p0.ComboPooledDataSource" destroy-method="close">
@@ -129,7 +129,7 @@ categories: [java]
 </bean>
 ```
 
-## 生成sessionFactory对象
+### 生成sessionFactory对象
 
 1. 服务器启动时加载spring配置文件(之间做好了)，再在Spring中配置加载hibernate配置
 
@@ -153,7 +153,7 @@ sessionFactory = configuration.buildSessionFactory();
 </bean>
 ```
 
-## 配置hibernate
+### 配置hibernate
 
 1. 建立实体类
 
@@ -220,7 +220,7 @@ sessionFactory = configuration.buildSessionFactory();
     </hibernate-configuration>
     ```
 
-## dao和service的注入
+### dao和service的注入
 
 Action注入Service，Service注入Dao(Impl)，DaoImp注入sessionFactory
 
@@ -240,7 +240,7 @@ Action注入Service，Service注入Dao(Impl)，DaoImp注入sessionFactory
 </bean>
 ```
 
-# 测试
+## 测试
 
 userAction中的代码
 
@@ -279,7 +279,7 @@ public void add(String name, String brithday, int score) {
 
 ![03](03.jpg)
 
-# 开启事务
+## 开启事务
 
 ```xml
 <!-- 创建事务管理器 -->
@@ -300,7 +300,7 @@ public class UserService {
 }
 ```
 
-# 使用HibernateTemplate
+## 使用HibernateTemplate
 
 生成HibernateTemplate，并在userDaoImpl中注入HibernateTemplate
 
@@ -336,7 +336,7 @@ public class UserDaoImpl implements UserDao {
 }
 ```
 
-# 错误解决
+## 错误解决
 
 ```
 HTTP Status 500 - Could not open Hibernate Session for transaction; nested exception is java.lang.NoClassDefFoundError: org/hibernate/engine/transaction/spi/TransactionContext
@@ -357,7 +357,7 @@ HTTP Status 500 - Could not open Hibernate Session for transaction; nested excep
 
 这里使用的是方法1
 
-# 另一种整合方式
+## 另一种整合方式
 
 还有一种整合方式是把hibernate核心配置全部都放到spring中,不需要再建立hibernate核心配置文件了
 
@@ -382,7 +382,7 @@ HTTP Status 500 - Could not open Hibernate Session for transaction; nested excep
 </bean
 ```
 
-# 注解方式搭建
+## 注解方式搭建
 
 引入struts2-convention依赖，让struts配置文件中取消对Action的配置
 
