--- a/_posts/2018-01-21-解决GitPage百度不收录.md
+++ b/_posts/2018-01-21-解决GitPage百度不收录.md
@@ -80,6 +80,10 @@ server {
 
 ![02](2.jpg)
 
+![03](3.jpg)
+
+![04](4.jpg)
+
 最后想了下，用Gitpage不就是自己的服务器到期不想续费吗，懒得搞动态博客程序了？而开着代理还是要用自己的服务器的，那还不如用wordpress
 
 默默删了代理，解析。。。去你妹的百度，不收录算了。。。
