--- a/_posts/2017-08-04-用maven构建项目.md
+++ b/_posts/2017-08-04-用maven构建项目.md
@@ -283,6 +283,10 @@ Packaging决定了是web项目还是java项目，选错了没关系，在pom.xml
 
 ### 项目依赖/插件配置
 
+一般eclipse会自动分析pom.xml里面的依赖，并自动构建，比如下载jar文件
+
+也可以在项目上右键 Maven-update project 重新构建项目,如果项目出现感叹号的时候可以重新构建一下
+
 ![11](11.png)
 
 ```xml
