--- a/_posts/2016-05-28-正则表达式.md
+++ b/_posts/2016-05-28-正则表达式.md
@@ -112,8 +112,24 @@ Pattern pattern = Pattern.compile("<.+?>");
 
 Matcher matcher = pattern.matcher("<p>6666</p>123");
 
+// 多个匹配位置
 while(matcher.find()){
+    //当前匹配位置的组matcher.group()
 	System.out.println(matcher.start()+","+matcher.end()+matcher.group());
+}
+```
+
+```
+Pattern fileNamePattern = Pattern.compile("^(\\d{4})-(\\d{2})-(\\d{2})-(.+)\\.md$");
+
+Matcher matcher = fileNamePattern.matcher("2016-05-28-正则表达式.md");
+
+// ^xxx$很显然，最多只有一个匹配位置
+if(matcher.find()){
+    System.out.println(matcher.group(1));
+    System.out.println(matcher.group(2));
+    System.out.println(matcher.group(3));
+    System.out.println(matcher.group(4));
 }
 ```
 
