--- a/_posts/2018-03-10-Git-Hook实现自动部署.md
+++ b/_posts/2018-03-10-Git-Hook实现自动部署.md
@@ -45,7 +45,9 @@ ssh-keygen -t rsa
 
 注意，如果提示：“所选的用户密钥未在远程主机上注册” ，搜了百度发现很多都说是：检查服务器的selinux及iptables是否开启，没有然和卵用，全是关的
 
-后来看到说要把.ssh目录设置为700 ，公钥authorized_keys也是600的权限 就可以了
+后来看到说要把.ssh目录设置为700 ，公钥authorized_keys的权限设置为600
+
+这个才是正解
 
 ```
 chmod 700 /home/git/.ssh 
@@ -84,11 +86,13 @@ git init --bare test.git
 可以通过hook，让每次项目push之后把某个分支自动checkout到某个目录(比如web目录)
 
 ```
-/git-repository/test.git/hooks
+cd /git-repository/test.git/hooks
 touch post-receive
+# 必须要有执行权限
 chmod +x post-receive
-# 最好给下读写权限
+# 必须要有读写权限
 chmod -R 777 /git-repository/
+chmod -R 777 /www.tmaize.net/test.tmaize.net/git/
 ```
 
 post-receive的内容
