--- a/_posts/2017-07-13-前端路由的两种实现.md
+++ b/_posts/2017-07-13-前端路由的两种实现.md
@@ -1,6 +1,6 @@
 ---
 layout: mypost
-title: 页面无刷新的两种实现
+title: 前端路由的两种实现
 categories: [javascript]
 ---
 
@@ -66,7 +66,7 @@ document.title = pageTitle;
 
 ### 监听window.onpopstate
 
-当用户点击前进后退时会被触发
+当活动历史记录条目更改时（非window.history.pushState），将触发popstate事件。如果被激活的历史记录条目是通过对history.pushState（）的调用创建的，或者受到对history.replaceState（）的调用的影响，popstate事件的state属性包含历史条目的状态对象的副本
 
 ```
 window.onpopstate = function(event){
@@ -78,20 +78,20 @@ window.onpopstate = function(event){
 };
 ```
 
+比如window.history.pushState产生一个记录
+
+history.go(-1) 回到上一个记录，触发onpopstate
+
+history.go(1) 还原记录，onpopstate，由于该记录是pushState产生的，可以拿到window.history.pushState时存放的state
+
+
 ### window.history.replaceState
 
 有时，你希望不添加一个新记录，而是替换当前的记录，则可以使用replaceState方法。这个方法和pushState的参数完全一样。没有记录时会创建一个记录。
 
 ### 一些问题
 
-1. 页面回退问题
-
-    当你点击几个页面后，你再回退会发现到达第一页，只能到达第二页。
-
-    因为pushState是将当前URL和history.state加入到history中，并用新的state和URL替换当前。
-	而按照前面的逻辑我放入的是新页面的state。当你回退到第一个state实际上就是第二个页面，再回退得到的是null。这个比较容易解决
-
-2. 页面刷新问题
+1. 页面刷新问题
 
     当前进几次后，有些用户会习惯性的刷新页面，这时得到的是数据页面。
 	解决方式有三种，一种是ajax的请求和浏览器的请求使用不同的方式，比如GET/POST，后端根据请求不同确定反馈数据还是页面。
