--- a/_posts/2017-07-13-前端路由的两种实现.md
+++ b/_posts/2017-07-13-前端路由的两种实现.md
@@ -66,7 +66,7 @@ document.title = pageTitle;
 
 ### 监听window.onpopstate
 
-当活动历史记录条目更改时（非window.history.pushState），将触发popstate事件。如果被激活的历史记录条目是通过对history.pushState（）的调用创建的，或者受到对history.replaceState（）的调用的影响，popstate事件的state属性包含历史条目的状态对象的副本
+当活动历史记录条目更改时（非window.history.pushState产生的变化），将触发popstate事件。如果被激活的历史记录条目是通过对history.pushState（）的调用创建的，或者受到对history.replaceState（）的调用的影响，popstate事件的state属性包含历史条目的状态对象的副本
 
 ```
 window.onpopstate = function(event){
