--- a/_posts/2016-10-15-使用CSS3让网页动起来.md
+++ b/_posts/2016-10-15-使用CSS3让网页动起来.md
@@ -225,3 +225,54 @@ window.onclick = function (ev) {
 ```
 
 ![p05](05.gif)
+
+## 3D翻牌效果
+
+```
+<div class="poker_wrap">
+    <div class="poker front">
+        <img src="https://game.gtimg.cn/images/kofmy/cp/a20180425xzz/card-1.png">
+    </div>
+    <div class="poker back">
+        <img src="https://game.gtimg.cn/images/kofmy/cp/a20180425xzz/card-11.png">
+    </div>
+</div>
+<style>
+    .poker_wrap {
+        margin: 0 auto;
+        position: relative;
+        perspective: 800px;
+        perspective-origin: 50% 50%;
+        width: 260px;
+        height: 349px;
+        font-size: 0;
+    }
+
+    .poker_wrap .poker {
+        transition: all 1s ease;
+        transform-style: preserve-3d;
+        backface-visibility: hidden;
+        position: absolute;
+        top: 0;
+        left: 0;
+    }
+
+    .poker_wrap .front {
+        transform: rotateY(0deg);
+    }
+
+    .poker_wrap .back {
+        transform: rotateY(-180deg);
+    }
+
+    .poker_wrap:hover .front {
+        transform: rotateY(180deg);
+    }
+
+    .poker_wrap:hover .back {
+        transform: rotateY(0deg);
+    }
+</style>
+```
+
+![p06](06.gif)
