--- a/_posts/2018-04-22-使用electron.md
+++ b/_posts/2018-04-22-使用electron.md
@@ -67,182 +67,17 @@ electron中，从package.json的main载入的js文件就是主进程，由主进
 
 ## 一个案例
 
-![01](01.png)
+demo地址 [TMaize/electron-usage](https://github.com/TMaize/electron-usage)
 
 ```
 # 调试
 npm run start
 # 打包
 npm run package-win
+
+# 需要注意的是通过require来引入依赖，使用ipcRenderer来进行通讯
+window.$ = window.jQuery = require("./dist/jquery.min");
+window.ipc = require('electron').ipcRenderer;
 ```
 
-package.json
-
-```
-{
-  "name": "eee",
-  "version": "1.0.0",
-  "description": "666",
-  "main": "main.js",
-  "scripts": {
-    "start": "electron .",
-    "package-win": "electron-packager . outDirName --out=release --platform=win32 --arch=x64 --version=1.0.0 --electron-version=1.8.4 --overwrite --prune=true --icon=./resource/glee.ico --ignore=temp/"
-  },
-  "author": "",
-  "license": "ISC"
-}
-```
-
-main.js
-
-```
-const url = require('url')
-const path = require('path')
-const electron = require('electron');
-
-const app = electron.app;
-const BrowserWindow = electron.BrowserWindow;
-const ipc = electron.ipcMain
-
-let devModel = false;
-// 判断是否是mac系统
-let isMac = process.platform === 'darwin'
-let appIcon = "./resource/dock.png";
-
-// 打开的一个窗口，暴露在全局便于管理
-let mainWindow;
-
-function createWindow() {
-
-    //创建一个窗口，可以创建多个
-    mainWindow = new BrowserWindow({
-        width: devModel ? 1000 : 380,
-        height: 610,
-        resizable: false,
-        title: "Demo",
-        icon: appIcon,
-        frame: false,
-        transparent: true
-    });
-
-    mainWindow.loadURL(url.format({
-        pathname: path.join(__dirname, 'app/index.html'),
-        protocol: 'file:',
-        slashes: true
-    }));
-
-    // 显示开发者工具
-    if (devModel) {
-        mainWindow.webContents.openDevTools();
-    }
-
-    if (isMac) {
-        app.dock.setIcon(appIcon);
-    }
-
-    //回收资源
-    mainWindow.on('closed', () => {
-        mainWindow = null;
-    });
-}
-
-app.on('ready', createWindow);
-
-app.on('window-all-closed', () => {
-    if (!isMac) {
-        app.quit();
-    }
-});
-
-ipc.on('window-min', function () {
-    mainWindow.minimize();
-})
-
-ipc.on('window-close', function () {
-    mainWindow.close();
-})
-```
-
-app/index.html
-
-```
-<!DOCTYPE html>
-<html>
-
-<head>
-    <meta charset="UTF-8">
-    <title>Hello World!</title>
-</head>
-
-<body>
-    <div id="container">
-
-        <h1 style="-webkit-app-region: drag">
-            <span>Hello</span>
-            <span style="-webkit-app-region: no-drag">
-                <input type="button" value="max" id="min">
-                <input type="button" value="close" id="close">
-            </span>
-        </h1>
-        <input type="button" value="请求http://blog.tmaize.net/" id="req">
-        <div id="req-out"></div>
-    </div>
-    <style>
-        * {
-            user-select: none;
-            cursor: default;
-        }
-
-        html,
-        body {
-            height: 100%;
-            width: 100%;
-            box-sizing: border-box;
-            padding: 8px;
-            margin: 0;
-        }
-
-        #container {
-            height: 100%;
-            width: 100%;
-            -moz-box-shadow: 0px 0px 8px #2B2B2B;
-            -webkit-box-shadow: 0px 0px 8px #2B2B2B;
-            box-shadow: 0px 0px 8px #2B2B2B;
-            background-color: white;
-            box-sizing: border-box;
-            overflow: auto;
-        }
-    </style>
-
-    <script>
-        //由于采用了nodejs的引用方式直接引用js文件全局变量无法导出
-        window.$ = window.jQuery = require("./js/jquery.min");
-        //渲染进程的通讯模块
-        window.ipc = require('electron').ipcRenderer;
-        //网络请求
-        window.http = require('http');
-        $(function () {
-
-            $('#min').click(function () {
-                ipc.send('window-min');
-            });
-
-            $('#close').click(function () {
-                ipc.send('window-close');
-            });
-
-            $('#req').click(function () {
-                http.get('http://blog.tmaize.net/', function (res) {
-                    res.setEncoding('utf8');
-                    res.on('data', function (chunk) {
-                        $('#req-out').text($('#req-out').text() + chunk);
-                    });
-                });
-
-            });
-        });
-    </script>
-</body>
-
-</html>
-```
+![01](01.png)
