--- a/_posts/2018-09-12-小程序-云开发.md
+++ b/_posts/2018-09-12-小程序-云开发.md
@@ -10,16 +10,16 @@ categories: [小技巧]
 
 取而代之的是云文件，云函数和云数据库（和 Bmob 云有点像）
 
-更新到最新的微信 web 开发者工具就行了
-
-https://developers.weixin.qq.com/miniprogram/dev/wxcloud/basis/getting-started.html
+更新到最新的微信 web 开发者工具就行了，[官方 API](https://developers.weixin.qq.com/miniprogram/dev/wxcloud/basis/getting-started.html)
 
 ## 开通
 
 新建项目，使用云开发快速启动项目模板（必须是自己的 APPID，测试 APPID 没有这个模板）
 
 ![01](01.png)
+
 ![02](02.png)
+
 ![03](03.png)
 
 ## 云文件
@@ -121,17 +121,117 @@ wx.cloud.callFunction({
 }
 ```
 
-## 数据库
+既然是 Node.js 的话，一些 Node.js 的库也是可以用的，比如要发送请求的时候可以通过云函数做代理来发送请求，从而就突破了小程序的合法域名的限制
 
-官方介绍说是云开发提供了一个 JSON 数据库，使用起来也很简单
+```
+var http = require('http')
 
-先创建一个集合，也就是数据库的table吧
+exports.main = (event, context) => {
+    return new Promise((resolve, reject) => {
+        let respData = 1
+        const req = http.request(event.options, res => {
+            res.on('data', chunk => {
+                respData += chunk
+            })
+            res.on('end', () => {
+                resolve(respData)
+            })
+            if (res.statusCode != 200) {
+                req.abort()
+                reject('res.statusCode != 200')
+            }
+        })
+        req.on('error', e => {
+            reject(e.message)
+        })
+
+        req.end()
+    })
+}
+```
+
+## 云数据库
+
+官方介绍说是云开发提供了一个 JSON 数据库，使用起来也很简单，同时也提供了简单的图形化操作界面
+
+注意在云函数和小程序里都可以使用云数据库
+
+先创建一个集合，也就是数据库的 table 吧
 
 ![07](07.png)
 
-但是并不要求是每一行的数据结构都一样
+但是并不要求是每一行的数据结构都一样，当然了，为了操作方便，每行的数据格式都应该是一致的
 
 ![07](07.png)
 
+### 查询
 
-待续....
+简单的根据主键查询
+
+```
+// 获得数据库引用
+const db = wx.cloud.database()
+// 构造查询条件,指定集合
+const users = db.collection('users')
+// 构造查询条件,指定_id
+const u = users.doc('1')
+// 开始查询
+u.get({
+    success: function(res) {
+        console.log(res.data)
+    }
+})
+```
+
+条件查询
+
+查询指令有：eq,neq,lt,lte,gt,gte,in,nin
+
+```
+const db = wx.cloud.database()
+const _ = db.command
+const users = db.collection('users')
+users.where({
+    name: _.in(['张三', '李四'])
+}).get({
+    success: function(res) {
+        console.log(res.data)
+    },
+    fail(e) {
+        console.log(e)
+    }
+})
+```
+
+逻辑指令有：and,or。上面的查询使用逻辑指令可以写成
+
+```
+name: _.eq('张三').or(_.eq('李四'))
+```
+
+### 修改
+
+前提是要有权限，不然会 errCode: -502003 database permission denied
+
+局部更新，update 方法，只对某个记录的某些字段更新
+
+```
+const db = wx.cloud.database()
+const _ = db.command
+const users = db.collection('users')
+users.doc('1').update({
+    data: {
+        name:'xxx'
+    },
+    success: function() {
+        console.log('success')
+    },
+    fail(e){
+        console.log(e)
+    }
+})
+```
+
+替换更新，set 方法，替换更新一条记录
+
+删除记录，remove 方法
