--- a/_posts/2018-09-12-小程序-云开发.md
+++ b/_posts/2018-09-12-小程序-云开发.md
@@ -10,7 +10,7 @@ categories: [小技巧]
 
 取而代之的是云文件，云函数和云数据库（和 Bmob 云有点像）
 
-更新到最新的微信 web 开发者工具就行了，[官方 API](https://developers.weixin.qq.com/miniprogram/dev/wxcloud/basis/getting-started.html)
+更新到最新的微信 web 开发者工具就行了，需要了解更多请到[官方 API](https://developers.weixin.qq.com/miniprogram/dev/wxcloud/basis/getting-started.html)查看
 
 ## 开通
 
@@ -185,6 +185,8 @@ u.get({
 
 条件查询
 
+除了主键查询，还提供了一系列的指令，通过 db.command 获得
+
 查询指令有：eq,neq,lt,lte,gt,gte,in,nin
 
 ```
@@ -214,6 +216,8 @@ name: _.eq('张三').or(_.eq('李四'))
 前提是要有权限，不然会 errCode: -502003 database permission denied
 
 局部更新，update 方法，只对某个记录的某些字段更新
+
+更新指令：set,remove,inc,mul,push,pop,shift,unshift
 
 ```
 const db = wx.cloud.database()
