--- a/_posts/2016-10-15-使用CSS3让网页动起来.md
+++ b/_posts/2016-10-15-使用CSS3让网页动起来.md
@@ -276,3 +276,136 @@ window.onclick = function (ev) {
 ```
 
 ![p06](06.gif)
+
+## 圆形加载动画
+
+![p07](07.gif)
+
+把右边框的颜射设置为透明色，实现了画出3/4圆
+
+```
+<div class="loading"></div>
+<style>
+    .loading {
+        display: inline-block;
+        width: 15px;
+        height: 15px;
+        border-radius: 50%;
+        border: 2px solid #c7c7c7;
+        /*画出3/4圆*/
+        border-right-color: transparent;
+        animation: animation-loading 1s infinite linear;
+    }
+
+    @keyframes animation-loading {
+        0% {
+            transform: rotate(0deg);
+        }
+
+        100% {
+            transform: rotate(360deg);
+        }
+    }
+</style>
+```
+
+## 扇形动画
+
+![p08](08.gif)
+
+这个实现起来较为复杂，关键点在于使用这个clip属性用来绘制半圆
+
+使用clip属性，元素必须是absolute的，rect(top right bottom left)代表矩形上边，右边，下边与左边 距离坐上角的位置
+
+![clip-rect](clip-rect.jpg)
+
+具体做法是一个灰色的半圆在上方，一个灰色的半圆在下方，上方的半圆逆时针旋转，两半圆的并集就是扇形了，但是在在转过180之后就不对了
+
+所以还需要一个白色的半圆在上方，在180之后白色的半圆再逆时针转动，就OK了，要注意3个半圆的遮挡顺序
+
+```
+<div class="container">
+    <div class="bottom"></div>
+    <div class="top2"></div>
+    <div class="top1"></div>
+</div>
+
+<style>
+    .container {
+        font-size: 0;
+        position: relative;
+    }
+
+    .bottom {
+        position: absolute;
+        width: 200px;
+        height: 200px;
+        clip: rect(100px, 200px, 200px, 0px);
+        border-radius: 100px;
+        background-color: #ccc;
+    }
+
+    .top1 {
+        position: absolute;
+        width: 200px;
+        height: 200px;
+        transform: rotate(0deg);
+        clip: rect(0px, 200px, 100px, 0px);
+        border-radius: 50%;
+        background-color: #ccc;
+        animation: an1 2s linear;
+        animation-fill-mode: forwards;
+        z-index: 100
+    }
+
+    .top2 {
+        position: absolute;
+        width: 200px;
+        height: 200px;
+        transform: rotate(0deg);
+        clip: rect(0px, 200px, 100px, 0px);
+        border-radius: 50%;
+        background-color: #FFF;
+        animation: an2 2s linear;
+        animation-fill-mode: forwards;
+        z-index: 0
+    }
+
+
+    @keyframes an1 {
+        0% {
+            transform: rotate(0deg);
+            z-index: 100
+        }
+
+        50% {
+            transform: rotate(-180deg);
+            z-index: 50
+        }
+
+        100% {
+            transform: rotate(-180deg);
+            z-index: 0
+        }
+    }
+
+    @keyframes an2 {
+        0% {
+            transform: rotate(0deg);
+            z-index: 0;
+        }
+
+        50% {
+            z-index: 50;
+            transform: rotate(0deg);
+        }
+
+        100% {
+            z-index: 100;
+            transform: rotate(-180deg);
+        }
+    }
+</style>
+```
+
+
