--- a/_posts/2018-12-15-restful设计规范.md
+++ b/_posts/2018-12-15-restful设计规范.md
@@ -1,258 +1,139 @@
 ---
 layout: mypost
-title: 腾讯云主机初始化
-categories: [linux]
+title: restful 设计规范
+categories: [Http]
 ---
 
+## URI
+URI （Uniform Resource Identifier，统一资源标识符)，资源一般对应服务器端领域模型中的实体类。
+###### URI规范
+1. 不用大写;
+2. 用中杠-不用下杠_;
+3. 参数列表要encode;
+4. **URI中的名词表示资源集合，使用复数形式。**
+
+##### 资源集合 vs 单个资源
+URI表示资源的两种方式：资源集合、单个资源。
+1. 资源集合：
 ```
-操作系统	CentOS 6.3 32位
-CPU	1核
-内存	1GB
-系统盘	disk-j1wsgrb9	20GB(云硬盘)
-数据盘	0GB
-公网带宽	1Mbps
-镜像名称	CentOS 6.3 32位
-......
+/zoos //所有动物园
+/zoos/1/animals //id为1的动物园中的所有动物
 ```
-		
-## 更新系统
-
+2. 单个资源：
 ```
-yum update
-yum clean all
-yum makecache
+/zoos/1 //id为1的动物园
+/zoos/1;2;3 //id为1，2，3的动物园
 ```
-
-## 简单修改
-
-+ 更改主机名
-
-	```
-	hostname  #显示主机名VM_243_11_centos
-	hostname tmaize.net  #临时修改主机名,重启会失效
-	vi /etc/sysconfig/network  #永久修改主机名HOSTNAME=tmaize.net
-	vi /etc/hosts  #修改hosts文件
-		127.0.0.1  localhost tmaize.net
-		::1        localhost tmaize.net
-	reboot  #重启系统
-	```
-
-+ 显示中文
-
-	由于是最小化安装，并没有设置语言，当又中文要显示时会乱码
-	这里并不打算更改系统语言，只是让他显示中文不乱码
-	
-	```
-	vi /etc/sysconfig/i18n  #LANG="en_US.UTF-8"
-	source /etc/sysconfig/i18n  #让修改内容立刻有效
-	```
-
-## 删除旧的内核
-	
-更新系统之后若更新了内核，系统并不会自动删除旧内核
-
-所以在启动选项中会有多个内核选项,可以手动使用以下命令删除多余的内核
-
+##### 避免层级过深的URI
+/在uri中表达层级，用于按实体关联关系进行对象导航，一般根据id导航。
+过深的导航容易导致uri膨胀，不易维护，如:
+`GET /zoos/1/areas/3/animals/4`。
+尽量使用查询参数代替路径中的实体导航，如:
+`GET /animals?zoo=1&area=3`；
+##### 对Composite资源的访问
+服务器端的组合实体必须在uri中通过父实体的id导航访问。
+组合实体不是first-class的实体，它的生命周期完全依赖父实体，它是无法独立存在的，**在实现上通常是对数据库表中某些列的抽象，不直接对应表，也无id**。一个常见的例子是 `User — Address`，`Address`是对`User`表中`zipCode，country，city`三个字段的简单抽象，无法独立于`User`存在。必须通过`User`索引到`Address`：
 ```
-uname -a  #查看系统当前内核版本
-Linux tmaize.net 2.6.32-573.18.1.el6.i686 #1 SMP Tue Feb 9 19:51:22 UTC 2016 i686 i686 i386 GNU/Linux
-rpm -qa | grep kernel  #看系统中全部的内核RPM包
-
-	kernel-2.6.32-504.30.3.el6.i686
-	kernel-firmware-2.6.32-573.18.1.el6.noarch
-	kernel-headers-2.6.32-573.18.1.el6.i686
-	dracut-kernel-004-388.el6.noarch
-	kernel-2.6.32-573.18.1.el6.i686
-	libreport-plugin-kerneloops-2.0.9-25.el6.centos.i686
-	kernel-2.6.32-279.el6.i686
-
-#可以看出2.6.32-573.18.1.el6.i686为新的内核2.6.32-504.30.3.el6.i686为旧的内核
-
-yum remove kernel-2.6.32-504.30.3.el6.i686  #删除旧内核的RPM包
-yum remove kernel-2.6.32-279.el6.i686
+GET /user/1/addresses    //id为1的用户的地址
 ```
-
-## 关闭不用的服务
-	
-+ 关闭SELinux
-
-	```
-	/usr/sbin/sestatus -v  #查看SELinux状态
-	getenforce  #也可以用这个命令检查
-	setenforce 0  #临时关闭(不用重启机器) 0为permissive模式 1为enforcing模式
-	vi /etc/selinux/config #永久关闭，将SELINUX=enforcing改为SELINUX=disabled
-	```
-
-+ 关闭防火墙
-
-	由于云主机自带了安全组，所以并不需要开启防火墙
-
-	```
-	service iptables stop  #停止服务 
-	chkconfig iptables off  #开机不再启动
-	```
-
-## 安装安全加固组件
-
+## Request
+##### HTTP方法
+通过标准HTTP方法对资源CRUD：
+**GET**：查询
 ```
-wget http://mirrors.tencentyun.com/install/sec/agent.zip
-unzip agent.zip
-bash install.sh
-/usr/local/sa/agent/restart.sh
-/usr/local/sa/agent/check.sh
+GET /zoos    //查询所有动物园
+GET /zoos/1    //查询id为1的动物园
+GET /zoos/1/employees    //查询id为1的动物园的所有员工
+GET /zoos/1/employees/1    //查询id为1的动物园的1号员工
 ```
-
-## 安装开发包和库文件
-
+**POST**：创建单个资源。POST一般向“资源集合”型uri发起
 ```
-yum groupinstall -y "Development Tools"
-yum install cmake bison-devel ncurses-devel autoconf automake zlib* fiex* libxml* libmcrypt* libtool-ltdl-devel*
+POST /animals  //新增动物
+POST /zoos/1/employees //为id为1的动物园雇佣员工
 ```
-
-## 开启SSH服务
-
-+ 查看SSH是否安装
-
-	```
-	rpm -qa | grep ssh
-	若没安装SSH则可输入：yum install openssh-server
-	```
-
-+ 启动SSH服务
-
-	在Linux中,系统的服务放在了 `/etc/rc.d/init.d/`目录下面
-
-	如果我们直接来到`/etc/rc.d/init.d/`目录下面,我们敲入了服务名sshd回车
-
-	结果是:`sshd re-exec requires execution with an absolute path`
-
-	这句是说它是需要一个路径来指定的,于是我们指定为当前目录:`./sshd`
-
-	正常输出`Usage: ./sshd {start|stop|restart|reload|force-reload|condrestart|try-restart|status}`
-
-	我们在手动管理这些服务的时候,是需要加上路径的,如在当前目录下面,就加上./表示是当前目录
-
-	我们在一些例如计划任务等的操作中要用命令的绝对路径
-
-	意思是害怕有人恶意把我们的命令替换掉,这样的话就会先从我们当前路径查找,万一有一个恶性命令,那么的话就会出现问题
-
-	另外一种方法是使用init.d目录中的服务的一个命令service
-
-	```
-	重启SSH服务：service sshd restart
-	开启SSH服务：service sshd start
-	停止SSH服务：service sshd stop
-	注意直接采用sshd restart会出错
-	重启后可输入：netstat -antp | grep sshd 查看是否启动22端口
-	```
-	
-+ 设置SSH服务为开机启动
-
-	```
-	输入命令：chkconfig sshd on 即可
-	若是chkconfig sshd off则禁止SSH开机启动
-	```
-	
-+ 使用SSH连接主机
-
-	```
-	ssh 127.0.0.1 -p 22
-	报错信息：bash: ssh: command not found
-	原因是只安装了ssh服务却没有安装客户端
-	安装：yum install openssh-clients
-	```
-
-+ 配置SSH
-
-	```
-	vi /etc/ssh/ssh_config 
-	vi /etc/ssh/sshd_config
-	```
-
-+ 内网ssh连接速度很慢的解决方案
-
-	```
-	# vi /etc/ssh/sshd_conf
-	修改UseDNS no
-	修改GSSAPIAuthentication no
-	保存退出
-	service sshd restart后再ssh相互连接发现很快
-	```
-
-## 安装桌面环境/可选
-
-默认最小化安装，在安装系统的时候没有安装桌面组件
-
+**PUT**：更新单个资源（全量），客户端提供完整的更新后的资源。与之对应的是 PATCH，PATCH 负责部分更新，客户端提供要更新的那些字段。PUT/PATCH一般向“单个资源”型uri发起
 ```
-yum grouplist  //显示系统已经安装的组件和可以安装的组件 
-yum groupinstall "X Window System"  /安装xwindow 
-yum groupinstall "GNOME Desktop Environment"  //安装GNOME桌面环境
-yum groupinstall "Desktop"  //Centos6.3安装GNOME桌面环境	
-yum groupinstall "KDE (K Desktop Environment)"  //安装KDE桌面环境 
-yum groupremove "GNOME Desktop Environment"  //卸载GNOME桌面环境  
-yum groupremove "KDE (K Desktop Environment)"  //卸载KDE桌面环境
-yum groupinstall "Chinese Support"  //安装中文语言
+PUT /animals/1
+PUT /zoos/1
 ```
-
-+ 开启图形界面
-
-	开机为文本界面，由文本界面切换到图形界面
-
-	方法1：运行命令 startx  //需要先配置图形界面信息
-
-	方法2：修改/etc/inittab文件中的
-	
-## 部署VNC服务端/可选
-
+**DELETE**：删除
 ```
-yum install tigervnc tigervnc-server -y  //安装vnc软件包
-chkconfig vncserver on  //设置vncserver开机启动
-vncpasswd  //设置vnc登录密码，密码保存在~/.vnc/passwd
-rpm -qc tigervnc-server  //查看vncserver配置文件位置
-
-vim /etc/sysconfig/vncservers  //配置vncserver
----
-#以用户root启动第一个和第二个桌面
-VNCSERVERS="1:root 2:root"
-# 调整分辨率
-VNCSERVERARGS[1]="-geometry 1024x768"
-VNCSERVERARGS[2]="-geometry 1024x768"
----
-
-vncserver :1  //启动vncserver
-vncserver :2
-
-vim ~/.vnc/xstartup  修改xstartup文件
----
-twm &改为gnome-session &
----
-
-service vncserver restart  //修改配置后重启服务
-
-iptables -I INPUT -m state --state NEW -m tcp -p tcp --dport 5901 -j ACCEPT  //配置防火墙
-iptables -I INPUT -m state --state NEW -m tcp -p tcp --dport 5902 -j ACCEPT
-//之前已经关闭了防火墙，在云主机的安全组放行端口
-service iptables save
+DELETE /zoos/1/employees/2    //删除id为1的动物园的2号员工
+DELETE /zoos/1/employees/2;4;5    //删除id为1的动物园的2,4,5号员工
+DELETE /zoos/1/animals  //删除id为1的动物园内的所有动物
 ```
+#### 安全性和幂等性
+安全性：不会改变资源状态，可以理解为只读的；
+幂等性：执行1次和执行N次，对资源状态改变的效果是等价的。
 
-+ VNC服务端常用命令
-
+| ······  | 安全性         | 幂等性 |
+| -------- |:--------:| ---:|
+| GET      | √ | √ |
+| POST      | ×      |   × |
+| PUT | ×   | √ |
+| DELETE | ×   | √ |
+安全性和幂等性均不保证反复请求能拿到相同的response。以 DELETE 为例，第一次DELETE返回200表示删除成功，第二次返回404提示资源不存在，这是允许的。
+##### 复杂查询
+查询可以捎带以下参数：
+||实例|备注|
+|-|-|-|
+| 过滤条件 | ?type=1&age=16 | 允许一定的uri冗余，如/zoos/1与/zoos?id=1 |
+| 排序 | ?sort=age,desc | |
+| 投影 | ?whitelist=id,name,email | |
+| 分页 | ?limit=10&offset=3 | |
+##### Format
+只用以下常见的3种body format：
+1. **Content-Type: application/json**；spring mvc用@RequestBody解析成对象
 ```
-vncserver -kill :1  //停止vncserver
-vncserver -kill :2
-vncserver :1  //启动vncserver
-vncserver :2
-service vncserver start  //批量启动
-service vncserver restart  //批量重启
-service vncserver stop  //批量停止
-vncserver -list  //查看运行的桌面
+POST /v1/animal HTTP/1.1
+Host: api.example.org
+Accept: application/json
+Content-Type: application/json
+Content-Length: 24
+
+{
+  "name": "Gir",
+  "animalType": "12"
+}
 ```
+2. **Content-Type: application/x-www-form-urlencoded** (浏览器POST表单用的格式，@RequestBody不能解析)
+```
+POST /login HTTP/1.1
+Host: example.com
+Content-Length: 31
+Accept: text/html
+Content-Type: application/x-www-form-urlencoded
 
-至此服务端部署完毕
+username=root&password=Zion0101
+```
+3. **multipart/form-data; boundary=----WebKitFormBoundaryITio08aDVqufJd9L**(表单有文件上传时的格式)
+##### Content Negotiation
+资源可以有多种表示方式，如json、xml、pdf、excel等等，客户端可以指定自己期望的格式，通常有两种方式：
+1. http header Accept：
+`Accept:application/xml;q=0.6,application/atom+xml;q=1.0`
+2. uri中加文件后缀
+`/zoo/1.json`
+## Response
+1. 不要包装：
+response 的 body 直接就是数据，不要做多余的包装。错误示例：
+```
+{
+    "success":true,
+    "data":{"id":1,"name":"xiaotuan"},
+}
+```
+正确示例:
+```
+{
+  "id":1,
+  "name":"xiaotuan"
+}
+```
+2. 各HTTP方法成功处理后的数据格式
 
-你可以通过UltraVNC Viewer、TigerVNC Viewer或者RealVNC Viewer访问远程桌面了
-
-## 创建备份
-
-在主机管理面板里创建硬盘快照（仅支持云硬盘），创建iso镜像，方便重装和恢复
-	
+||response 格式|
+|-|-|
+|GET|单个对象、集合|
+|POST|新增成功的对象|
+|PUT/PATCH|更新成功的对象|
+|DELETE|空|
