--- a/_posts/2018-12-15-restful设计规范.md
+++ b/_posts/2018-12-15-restful设计规范.md
@@ -4,7 +4,7 @@ title: restful 设计规范
 categories: [Http]
 ---
 
-## URI
+# URI
 
 URI （Uniform Resource Identifier，统一资源标识符)，资源一般对应服务器端领域模型中的实体类。
 
@@ -42,7 +42,7 @@ URI表示资源的两种方式：资源集合、单个资源。
 GET /user/1/addresses    //id为1的用户的地址
 ```
 
-## Request
+# Request
 ##### HTTP方法
 通过标准HTTP方法对资源CRUD：
 **GET**：查询
@@ -86,8 +86,8 @@ DELETE /zoos/1/animals  //删除id为1的动物园内的所有动物
 安全性和幂等性均不保证反复请求能拿到相同的response。以 DELETE 为例，第一次DELETE返回200表示删除成功，第二次返回404提示资源不存在，这是允许的。
 ##### 复杂查询
 查询可以捎带以下参数：
-||实例|备注|
-|-|-|-|
+|---|实例|备注|
+|:-:|:-:|:-:|
 | 过滤条件 | ?type=1&age=16 | 允许一定的uri冗余，如/zoos/1与/zoos?id=1 |
 | 排序 | ?sort=age,desc | |
 | 投影 | ?whitelist=id,name,email | |
@@ -129,7 +129,7 @@ username=root&password=Zion0101
 2. uri中加文件后缀
 `/zoo/1.json`
 
-## Response
+# Response
 1. 不要包装：
 response 的 body 直接就是数据，不要做多余的包装。错误示例：
 ```
