--- a/_posts/2018-12-15-restful设计规范.md
+++ b/_posts/2018-12-15-restful设计规范.md
@@ -77,7 +77,7 @@ DELETE /zoos/1/animals  //删除id为1的动物园内的所有动物
 幂等性：执行1次和执行N次，对资源状态改变的效果是等价的。
 
 | ······  | 安全性         | 幂等性 |
-| -------- |:--------:| ---:|
+| -------- |:--------:| :---:|
 | GET      | √ | √ |
 | POST      | ×      |   × |
 | PUT | ×   | √ |
@@ -89,9 +89,9 @@ DELETE /zoos/1/animals  //删除id为1的动物园内的所有动物
 |---|实例|备注|
 |:-:|:-:|:-:|
 | 过滤条件 | ?type=1&age=16 | 允许一定的uri冗余，如/zoos/1与/zoos?id=1 |
-| 排序 | ?sort=age,desc | |
-| 投影 | ?whitelist=id,name,email | |
-| 分页 | ?limit=10&offset=3 | |
+| 排序 | ?sort=age,desc | - |
+| 投影 | ?whitelist=id,name,email | - |
+| 分页 | ?limit=10&offset=3 | - |
 
 ##### Format
 只用以下常见的3种body format：
