atom学习第一次提交

--- a/_posts/2018-12-16-Atom 学习.md
+++ b/_posts/2018-12-16-Atom 学习.md
@@ -3,5 +3,12 @@ layout: mypost
 title: Atom 学习
 categories: [Http]
 ---
-[官方 API](https://developers.weixin.qq.com/miniprogram/dev/wxcloud/basis/getting-started.html)查看
-https://atom.io/
+1. 从[Atom官网](https://atom.io/)下载软件，并完成安装。
+2. 下载并安装 Markdown 增强插件 Markdown-preview-enhanced
+基础性功能的改进
+这款插件在编辑方面的改进：
+
+我利用简单的几行代码，就生成了一个流程图。
+
+![16](m-01.jpg)
+对导入导出功能的改进
