commit new file

--- a/_posts/2018-12-16-Atom 学习.md
+++ b/_posts/2018-12-16-Atom 学习.md
@@ -4,11 +4,15 @@ title: Atom 学习
 categories: [Http]
 ---
 1. 从[Atom官网](https://atom.io/)下载软件，并完成安装。
-2. 下载并安装 Markdown 增强插件 Markdown-preview-enhanced
-基础性功能的改进
-这款插件在编辑方面的改进：
+2. Command + shift + p 输入settings 找到install packages，
 
-我利用简单的几行代码，就生成了一个流程图。
+![Command + shift + p](m-02.jpg)
+
+搜索 Markdown-preview-enhanced 下载Markdown增强插件
+这款插件在编辑方面有所改进：
+![Markdown-preview-enhanced](m-03.jpg)
+
+例如：我利用简单的几行代码，就生成了一个流程图。
 
 ![16](m-01.jpg)
 对导入导出功能的改进
