--- a/_posts/2018-12-16-Atom 学习.md
+++ b/_posts/2018-12-16-Atom 学习.md
@@ -6,11 +6,11 @@ categories: [Http]
 1. 从[Atom官网](https://atom.io/)下载软件，并完成安装。
 2. Command + shift + p 输入settings 找到install packages，
 
-![Command + shift + p](m-02.jpg)
+![Command + shift + p](m-02.tiff)
 
 搜索 Markdown-preview-enhanced 下载Markdown增强插件
 这款插件在编辑方面有所改进：
-![Markdown-preview-enhanced](m-03.jpg)
+![Markdown-preview-enhanced](m-03.jpeg)
 
 例如：我利用简单的几行代码，就生成了一个流程图。
 
