不支持tiff后缀的图片，修改成jpeg

--- a/_posts/2018-12-16-Atom 学习.md
+++ b/_posts/2018-12-16-Atom 学习.md
@@ -6,7 +6,7 @@ categories: [Http]
 1. 从[Atom官网](https://atom.io/)下载软件，并完成安装。
 2. Command + shift + p 输入settings 找到install packages，
 
-![Command + shift + p](m-02.tiff)
+![Command + shift + p](m-02.jpeg)
 
 搜索 Markdown-preview-enhanced 下载Markdown增强插件
 这款插件在编辑方面有所改进：
