快捷键说明添加

--- a/_posts/2018-12-16-Atom 学习.md
+++ b/_posts/2018-12-16-Atom 学习.md
@@ -12,6 +12,8 @@ categories: [Http]
 这款插件在编辑方面有所改进：
 ![Markdown-preview-enhanced](m-03.jpeg)
 
+切换实时预览的快捷键为 control + shift + m 
+
 例如：我利用简单的几行代码，就生成了一个流程图。
 
 ![16](m-01.jpg)
