--- a/_posts/2016-04-20-jQuery学习笔记.md
+++ b/_posts/2016-04-20-jQuery学习笔记.md
@@ -1,7 +1,7 @@
 ---
 layout: mypost
 title: jQuery学习笔记
-categories: [javascript]
+categories: [前端]
 ---
 
 jQuery是一个快速、简洁的JavaScript框架，是继Prototype之后又一个优秀的JavaScript代码库（或JavaScript框架）。
