--- a/_posts/2016-10-15-使用CSS3让网页动起来.md
+++ b/_posts/2016-10-15-使用CSS3让网页动起来.md
@@ -1,7 +1,7 @@
 ---
 layout: mypost
 title: 使用CSS3让网页动起来
-categories: [html/css]
+categories: [前端]
 ---
 
 之前的笔记介绍了[css3-变换-渐变-动画](/posts/2016/08/20/css3-变换-渐变-动画.html)的基本使用
