--- a/_posts/2016-11-17-mybatis笔记整理.md
+++ b/_posts/2016-11-17-mybatis笔记整理.md
@@ -1,7 +1,7 @@
 ---
 layout: mypost
 title: MyBatis笔记整理
-categories: [java]
+categories: [Java]
 ---
 
 [mybatis-3官方中文文档](http://www.mybatis.org/mybatis-3/zh/index.html)
