--- a/_posts/2017-04-19-nginx配置ssl-重新编译.md
+++ b/_posts/2017-04-19-nginx配置ssl-重新编译.md
@@ -1,7 +1,7 @@
 ---
 layout: mypost
 title: Nginx配置SSL 重新编译
-categories: [linux]
+categories: [Linux]
 ---
 
 最近在做微信小程序，但是微信的wx.request(OBJECT)接口里面wx.request发起的是 HTTPS 请求
