--- a/_posts/2017-08-02-对MVP架构的一些理解.md
+++ b/_posts/2017-08-02-对MVP架构的一些理解.md
@@ -1,7 +1,7 @@
 ---
 layout: mypost
 title: 对MVP架构的一些理解
-categories: [android]
+categories: [Android]
 ---
 
 MVP模式是MVC模式在Android上的一种变体，要介绍MVP就得先介绍MVC。
