--- a/_posts/2017-08-04-用maven构建项目.md
+++ b/_posts/2017-08-04-用maven构建项目.md
@@ -1,7 +1,7 @@
 ---
 layout: mypost
 title: 用maven构建项目
-categories: [java]
+categories: [Java]
 ---
 
 Maven是一个项目管理工具，它包含了一个项目对象模型 (Project Object Model)，一组标准集合，一个项目生命周期(Project Lifecycle)，一个依赖管理系统(Dependency Management System)，和用来运行定义在生命周期阶段(phase)中插件(plugin)目标(goal)的逻辑。当你使用Maven的时候，你用一个明确定义的项目对象模型来描述你的项目，然后Maven可以应用横切的逻辑，这些逻辑来自一组共享的（或者自定义的）插件。
