--- a/_posts/2017-08-09-正确引入layui模块.md
+++ b/_posts/2017-08-09-正确引入layui模块.md
@@ -1,7 +1,7 @@
 ---
 layout: mypost
 title: 正确引入Layui模块
-categories: [javascript]
+categories: [前端]
 ---
 
 > [Layui](http://www.layui.com/doc/base/infrastructure.html) 出蛋于2016年金秋，是一款带着浓烈情怀的国产前端UI框架，她追求极简，又不失丰盈的内在，说她是史上最轻量的结晶，似乎并不为过。一切都源自于她对原生态的执着，对前端社区的那些噪杂声音的过滤，以及她本身的精心雕琢
