--- a/_posts/2017-08-15-原生js插件封装.md
+++ b/_posts/2017-08-15-原生js插件封装.md
@@ -1,7 +1,7 @@
 ---
 layout: mypost
 title: 原生js插件封装
-categories: [javascript]
+categories: [前端]
 ---
 
 在进行开发时，有时候需要一个小功能(比如jsonp)，但是却有一个很大的库(jQuery)提供了这个功能。
