--- a/_posts/2017-09-14-junit的正确使用姿势.md
+++ b/_posts/2017-09-14-junit的正确使用姿势.md
@@ -1,7 +1,7 @@
 ---
 layout: mypost
 title: JUnit的正确使用姿势
-categories: [java]
+categories: [Java]
 ---
 
 一直以来，使用junit的原因是可以单独运行方法，不用在写大量的main方法了，而且喜欢使用System.out来输出测试结果
