--- a/_posts/2017-11-12-ReqProxy.md
+++ b/_posts/2017-11-12-ReqProxy.md
@@ -1,7 +1,7 @@
 ---
 layout: mypost
 title: ReqProxy
-categories: [java]
+categories: [Java]
 ---
 
 最近在做一个小玩意，用的别人的api，在本地调试的还好，部署到服务器上的时候发现对api的请求都是禁止跨域，可惜的是也没有提供jsonp接口
