--- a/_posts/2017-11-21-JS的事件委托.md
+++ b/_posts/2017-11-21-JS的事件委托.md
@@ -1,7 +1,7 @@
 ---
 layout: mypost
 title: JS的事件委托
-categories: [javascript]
+categories: [前端]
 ---
 
 在用jQuery的时候就知道对于表格的行或者列表的项添加事件的时候要使用on而不是直接添加事件。因为列表项和表格的内容经常是或被更新的,如果对一个位置添加事件,当这个位置的html被替换后,之前添加的时间也会消失的
