--- a/_posts/2018-01-21-解决GitPage百度不收录.md
+++ b/_posts/2018-01-21-解决GitPage百度不收录.md
@@ -1,7 +1,7 @@
 ---
 layout: mypost
 title: 解决GitPage百度不收录
-categories: [seo]
+categories: [小技巧]
 ---
 
 最近发现在百度上已经找不到我的博客了，70多条索引一个都没有了，而Google和360还是有比较高的索引的
