--- a/_posts/2018-08-25-使用webpack.md
+++ b/_posts/2018-08-25-使用webpack.md
@@ -1,7 +1,7 @@
 ---
 layout: mypost
 title: 使用Webpack
-categories: [javascript]
+categories: [前端]
 ---
 
 webpack 是现在流行的前端打包工具，用于模块化开发，从一个入口文件开始，将所有依赖打包成一个 JS 文件
